<resources>
    <string name="app_name">iDontKnow</string>

    <!-- Firebase messages -->
    <string name="auth_failed">Failed to Authenticate</string>
    <string name="auth_success">Authentication Success</string>

    <!-- activity_login -->
    <string name="hint_email">Enter your e-mail address</string>
    <string name="hint_nickname2">Enter your nickname</string>
    <string name="hint_password">Enter your password</string>
    <string name="btn_login">Login</string>
    <string name="btn_forgotPassword"> Forgot your password?</string>
    <string name="linkbtn_register"> Don\'t have an account? Create one!</string>

    <!-- activity_register -->
    <string name="hint_nickname">Nickname</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_newPassword">New password</string>
    <string name="hint_newPassword2">Confirm password</string>
    <string name="hint_number">Phone number</string>
    <string name="hint_email1">Enter your e-mail address</string>
    <string name="btn_register"> Register</string>
    <string name="linkbtn_login"> Already have an account? Login!</string>

    <!-- activity_profile -->
    <string name="btn_save">Save changes</string>
    <string name="btn_back">Back</string>
    <string name="find_text">Find</string>
    <string name="reset_text">Reset filter</string>
    <string name="cancel_text">Cancel</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- dialog img picker -->
    <string name="txt_img_picker">Choose profile picture from: </string>
    <string name="btn_gallery">Gallery</string>
    <string name="btn_camera">Camera</string>
    <string name="title_activity_image_picker">ImagePickerActivity</string>


    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>

    <string name="failed_login">Failed login</string>

    <!-- Bottom navigation bar titles -->
    <string name="title_places">Places</string>
    <string name="title_maps">Maps</string>
    <string name="title_friends">Friends</string>
    <string name="title_rank">Rank</string>

    <string name="find_title">Pick place type</string>
    <string name="place_review_info">Places within 100m are valid for review.\nPlease pick one!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="btn_review">Write a review</string>
    <string name="txt_review">Write a review</string>
    <string name="txt_rate">Rate this place:</string>
    <string name="success_review">Please fill any empty fields.</string>
    <string name="error_review">Your review is saved.</string>
    <string name="txt_total_poens">Total poens:</string>
    <string name="hint_poens">Total poens:</string>
    <string name="btn_logout">logout</string>
    <string name="total_poens">total poens:</string>
    <string name="under_construction">Under construction...</string>

    <string-array name="places_type">
        <item>-select-</item>
        <item>pivnica</item>
        <item>kafe-poslastičara</item>
        <item>gastro bar</item>
    </string-array>

    <string name="distance_title">Set diameter</string>

    <string name="under_work_text">Under Work</string>
</resources>
