<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp">


    <TextView
        android:id="@+id/txt_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_gravity="center"
        android:text="@string/find_title"
        android:textSize="@dimen/_15sdp"
        android:gravity="center"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toBottomOf="@+id/txt_rate"/>

    <TextView
        android:id="@+id/seekBarTextDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_gravity="center"
        android:text="@string/distance_title"
        android:textSize="@dimen/_15sdp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        android:textStyle="bold"/>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/seekBarTextDesc"/>

    <TextView
        android:id="@+id/seekBarText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_gravity="center"
        android:textSize="@dimen/_15sdp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnFind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/colorAccent"
        android:text="@string/find_text"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/seekBarText"/>

    <Button
        android:id="@+id/btnRestore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/colorPrimary"
        android:text="@string/reset_text"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/btnFind"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/cancel_color"
        android:text="@string/cancel_text"
        app:layout_constraintTop_toBottomOf="@id/btnRestore"/>


</android.support.constraint.ConstraintLayout>