<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:fitsSystemWindows="true"
    android:background="@drawable/bcg77">

    <ImageView
        android:id="@+id/register_img_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:foregroundGravity="top"
        android:src="@drawable/logo"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_nickname"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_img_logo">
        <EditText
            android:id="@+id/register_etxt_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nickname"
            android:inputType="text"
            android:textAlignment="center" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_name"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_nickname">
        <EditText
            android:id="@+id/register_etxt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:textAlignment="center" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_surname"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_name">
        <EditText
            android:id="@+id/register_etxt_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_surname"
            android:inputType="text"
            android:textAlignment="center" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_email"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_surname"
        android:layout_margin="@dimen/_1sdp">
        <EditText
            android:id="@+id/register_etxt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_password"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_email"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/register_etxt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_newPassword"
            android:inputType="textPassword"
            android:textAlignment="center" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_password_check"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_password"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/register_etxt_password_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_newPassword2"
            android:inputType="textPassword"
            android:textAlignment="center" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/register_btn_register"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_password_check"

        android:layout_marginTop="@dimen/_25sdp"
        android:text="@string/btn_register"/>

    <Button
        android:id="@+id/register_btn_login"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_btn_register"
        android:text="@string/linkbtn_login"
        android:background="@null"
        android:textAllCaps="false"/>

</android.support.constraint.ConstraintLayout>

