<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".FriendsProfileActivity"
    android:background="@drawable/bcg">

    <RelativeLayout
        android:id="@+id/friend_img"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/friend_img_profile"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_140sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:src="@drawable/ic_avatar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>


        <TextView
            android:id="@+id/friend_nickname"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_30sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/friend_img"
            android:layout_marginTop="@dimen/_40sdp"
            android:textAlignment="center"
            android:hint="@string/hint_nickname"
            android:textSize="@dimen/_15sdp"
            android:gravity="center"/>



        <TextView
            android:id="@+id/friend_name"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_30sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/friend_nickname"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/hint_name"
            android:textSize="@dimen/_15sdp"
            android:textAlignment="center"
            android:gravity="center"/>

        <TextView
            android:id="@+id/friend_surname"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_30sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/friend_name"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/hint_surname"
            android:textSize="@dimen/_15sdp"
            android:textAlignment="center"
            android:gravity="center"/>


    <TextView
        android:id="@+id/txt_poens"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/friend_poens"
        app:layout_constraintTop_toBottomOf="@id/friend_surname"
        android:layout_marginTop="@dimen/_40sdp"
        android:hint="@string/hint_poens"
        android:textSize="@dimen/_15sdp"
        android:textAlignment="center"
        android:gravity="center"/>

        <TextView
            android:id="@+id/friend_poens"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:gravity="center"
            app:layout_constraintLeft_toRightOf="@id/txt_poens"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/friend_surname"
            android:layout_marginTop="@dimen/_40sdp"
            android:hint="0"
            android:textSize="@dimen/_15sdp"
            android:textAlignment="center"
            />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_poens"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/btn_back"/>




</android.support.constraint.ConstraintLayout>