<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:fitsSystemWindows="true"
    android:background="@drawable/bcg">


    <RelativeLayout
        android:id="@+id/profile_img"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_img_profile"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:src="@drawable/ic_avatar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_15sdp" />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/img_plus"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignBottom="@id/profile_img_profile"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_plus"
            app:civ_shadow="true"
            app:civ_shadow_radius="3"
            />
    </RelativeLayout>

    <EditText
        android:id="@+id/profile_etxt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_img"
        android:layout_margin="@dimen/_8sdp"
        android:hint="@string/hint_name"
        android:inputType="text"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/profile_etxt_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_etxt_name"
        android:layout_margin="@dimen/_8sdp"
        android:hint="@string/hint_surname"
        android:inputType="text"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/profile_etxt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_etxt_surname"
        android:layout_margin="@dimen/_8sdp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center" />


    <EditText
        android:id="@+id/profile_etxt_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_etxt_email"
        android:layout_margin="@dimen/_8sdp"
        android:inputType="date"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/profile_etxt_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_etxt_birthday"
        android:layout_margin="@dimen/_8sdp"
        android:hint="@string/hint_number"
        android:inputType="phone"
        android:textAlignment="center" />

    <Button
        android:id="@+id/profile_btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_etxt_number"
        android:layout_margin="@dimen/_20sdp"
        android:text="@string/btn_save"/>



</android.support.constraint.ConstraintLayout>